--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -61,12 +61,15 @@
     padding-left: 3.5px;
     padding-right: 3.5px;
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
     abbr {
       display: flex;
+      width: 100%;
       justify-content: center;
       align-items: center;
-      flex-grow: 1;
       background: rgba(238, 238, 238, 1);
       border-radius: 9999px;
       height: 43px !important;
@@ -102,9 +105,9 @@
     background-color: transparent;
     abbr {
       display: flex;
+      width: 100%;
       justify-content: center;
       align-items: center;
-      flex-grow: 1;
       border-radius: 9999px;
       height: 43px !important;
       border: 2px solid #0d9800;
